fixed the newsletter section

--- a/public/index.html
+++ b/public/index.html
@@ -604,24 +604,22 @@
 
       </div>
     </div><!-- Safety Boots -->
-
-    <div class="flex flex-row rounded-lg shadow-lg my-20 mx-auto mt-2 px-10 py-10">
-      <div class="w-3/5 bg-gradient-to-r from-black via-purple-900 to-transparent rounded-lg text-gray-100 p-1">
-        <div class="w-full">
-          <h3 class="text-2xl font-extrabold w-3/5 m-4">Subscrible now a befitting discount</h3>
-          <p class="m-4 leading-relaxed w-1/2">for every update on our new offers, sign up for our newsletter and we'll immediately respond.</p>
+   
+    <div class="flex flex-col xl:flex-row justify-center text-center">
+      <div class="w-full bg-gradient-to-r from-black via-purple-900 from-black to-purple-900 to-transparent rounded-lg text-gray-100 p-1">
+        <div class="mt-5">
+          <h3 class="text-2xl font-extrabold px-4 py-1 py-3 mb-1">Subscrible now for a befitting discount</h3>
+          <p class="mb-4 leading-relaxed py-1 w-full px-4 py-3">for every update on our new offers, sign up for our newsletter and we'll immediately respond.</p>
         </div>
-        <div>
-          <input type="email" placeholder="Enter valid email" class="bg-gray-600 text-gray-200 placeholder-gray-400 m-4 px-4 py-3 w-2/3 rounded-lg focus:outline-none mb-4">
-          <button type="submit" class="bg-red-600 py-3 rounded-lg text-gray-200 m-4 px-4 py-3 w-full rounded-lg focus:outline-none w-2/3 mb-4">Subscribe</button>
+        <div class="justify-center">
+          <input type="email" placeholder="Enter valid email" class="bg-gray-600 text-gray-200 placeholder-gray-400 m-2 px-4 py-3 w-1/2 rounded-lg focus:outline-none mb-2">
+          <button type="submit" class="bg-red-600 m-4 px-4 py-3 w-1/2 rounded-lg focus:outline-none">Subscribe</button>
         </div> 
       </div>
-      <div class="w-2/5">
-        <img src="../image/pointer.svg" alt="">
-      </div>
     </div><!-- Newsletter -->
-
+    
 
   </div>
 </body>
-</html>    
+</html>  
+
