--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <div class="container  mx-auto p-5">
+    <!-- main navigation -->
    <div class="md:flex md:flex-row md:justify-between text-center">
     <div class="flex flex-row justify-center">
       <div class="w-10 h-10  rounded-lg">
@@ -31,15 +32,17 @@
         Cart (0)
       </a>
      </div>
-    </div><!-- main navigation -->
+    </div>
 
-    <div class="flex flex-row mt-20">
+
+    <div class="flex sm:flex-col flex-row mt-20">
       <div class="w-2/5 flex flex-col justify-center items-center text-center">
         <h2 class="font-serif text-5xl text-gray-600 mb-4 text-center md:self-start md:text-left">Psyche-delic Safety Klodin</h2>
         <p class="uppercase text-gray-600 tracking-wide md:text-left">Discover the world of Fashion in comfortable safety.</p>
         <p class="uppercase text-gray-600 tracking-wide md:text-left">Colorful Fashionable and Safe.</p>
         <a href="" class="bg-gradient-to-r from-red-600 to-pink-500  rounded-full py-4 px-8 text-gray-50 uppercase text-xl md:self-start lg:self-start">Shop now</a>
       </div>
+
       <div class="w-3/5">
         <img src="../image/shopping.svg" alt="">
       </div>
@@ -58,7 +61,7 @@
       <div class="grid grid-flow-row sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-10">
         <div class="shadow-lg rounded-lg">
           <a href="#">
-          <img src="../image/m2 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
+          <img src="./image/m2 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
         </a>
         <div class="p-5">
           <h3><a href="">Men's Overall</a></h3>
@@ -101,7 +104,7 @@
 
         <div class="shadow-lg rounded-lg">
           <a href="#">
-          <img src="../image/m3 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
+          <img src="./image/m3 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
         </a>
         <div class="p-5">
           <h3><a href="">Men's Overall</a></h3>
