debugging (unavailable images)

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
    <div class="md:flex md:flex-row md:justify-between text-center">
     <div class="flex flex-row justify-center">
       <div class="w-10 h-10  rounded-lg">
-        <img src="../image/rectangle logo 11 1.svg" alt="">
+        <img src="./image/rectangle logo 11 1.svg" alt="">
       </div>
       <h1 class="text-3xl text-gray-600 ml-2">PS Klodin</h1>
      </div>
@@ -44,7 +44,7 @@
       </div>
 
       <div class="w-3/5">
-        <img src="../image/shopping.svg" alt="">
+        <img src="./image/shopping.svg" alt="">
       </div>
     </div><!-- Nero -->
 
@@ -147,7 +147,7 @@
 
         <div class="shadow-lg rounded-lg">
           <a href="#">
-          <img src="../image/m4 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
+          <img src="./image/m4 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
         </a>
         <div class="p-5">
           <h3><a href="">Men's Overall</a></h3>
@@ -190,7 +190,7 @@
 
         <div class="shadow-lg rounded-lg">
           <a href="#">
-          <img src="../image/m10 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
+          <img src="./image/m10 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
         </a>
         <div class="p-5">
           <h3><a href="">Men's Overall</a></h3>
@@ -247,7 +247,7 @@
       <div class="grid grid-flow-row sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-10">
         <div class="shadow-lg rounded-lg">
           <a href="#">
-          <img src="../image/f1 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
+          <img src="./image/f1 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
         </a>
         <div class="p-5">
           <h3><a href="">Ladies Overall</a></h3>
@@ -290,7 +290,7 @@
 
         <div class="shadow-lg rounded-lg">
           <a href="#">
-          <img src="../image/f2 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
+          <img src="./image/f2 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
         </a>
         <div class="p-5">
           <h3><a href="">Ladies Overall</a></h3>
@@ -333,7 +333,7 @@
 
         <div class="shadow-lg rounded-lg">
           <a href="#">
-          <img src="../image/f3 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
+          <img src="./image/f3 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
         </a>
         <div class="p-5">
           <h3><a href="">Ladies Overall</a></h3>
@@ -376,7 +376,7 @@
 
         <div class="shadow-lg rounded-lg">
           <a href="#">
-          <img src="../image/f4 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
+          <img src="./image/f4 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
         </a>
         <div class="p-5">
           <h3><a href="">Ladies Overall</a></h3>
@@ -435,7 +435,7 @@
       <div class="grid grid-flow-row sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-10">
         <div class="shadow-lg rounded-lg">
           <a href="#">
-          <img src="../image/Instagram post - 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
+          <img src="./image/Instagram post - 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
         </a>
         <div class="p-5">
           <h3><a href="">Safety Boots</a></h3>
@@ -478,7 +478,7 @@
 
         <div class="shadow-lg rounded-lg">
           <a href="#">
-          <img src="../image/s4 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
+          <img src="./image/s4 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
         </a>
         <div class="p-5">
           <h3><a href="">Safety Boots</a></h3>
@@ -521,7 +521,7 @@
 
         <div class="shadow-lg rounded-lg">
           <a href="#">
-          <img src="../image/s3 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
+          <img src="./image/s3 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
         </a>
         <div class="p-5">
           <h3><a href="">Safety Boots</a></h3>
@@ -564,7 +564,7 @@
 
         <div class="shadow-lg rounded-lg">
           <a href="#">
-          <img src="../image/s1 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
+          <img src="./image/s1 1.svg" class="rounded-tl-lg rounded-tr-lg" alt="">
         </a>
         <div class="p-5">
           <h3><a href="">Safety Boots</a></h3>
