--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     </div>
 
 
-    <div class="flex sm:flex-col flex-row mt-20">
+    <div class="flex flex-row mt-20">
       <div class="w-2/5 flex flex-col justify-center items-center text-center">
         <h2 class="font-serif text-5xl text-gray-600 mb-4 text-center md:self-start md:text-left">Psyche-delic Safety Klodin</h2>
         <p class="uppercase text-gray-600 tracking-wide md:text-left">Discover the world of Fashion in comfortable safety.</p>
