--- a/public/index.html
+++ b/public/index.html
@@ -64,9 +64,9 @@
                   <h1 class="sm:mb-3 text-3xl text-blue-500">Featured Institutions</h1>
                 </div>
           <!-- Image -->
-          <div class="grid lg:grid-cols-3 flex flex-1 justify-center sm:px-20 mt-10   sm:align-center">
+          <div class="grid lg:grid-cols-3 flex flex-1 justify-center sm:px-20 mt-10 sm:mr-60 sm:ml-60  sm:align-center">
             <img
-              class="lg:w-5/6 lg:h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full"
+              class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full"
               src="./image/xfc.svg"
               alt=""
             />
@@ -117,7 +117,7 @@
                   <h1 class="sm:mb-3 text-3xl text-blue-500">Payment Options</h1>
                 </div>
           <!-- Image -->
-          <div class="grid lg:grid-cols-3 flex flex-1 justify-center sm:px-20 mt-10 mb-10 sm:align-center">
+          <div class="sm:mr-60 sm:ml-60 grid lg:grid-cols-3 flex flex-1 justify-center sm:px-20 mt-10 mb-10 sm:align-center">
             <img
               class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full"
               src="./image/mastercard.svg"
