adjusted text on mobile size

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
         <div class=" flex flex-col lg:flex-row items-center justify-center gap-x-24">
                  <!-- Content -->
                  <div class="flex flex-1 flex-col px-10  items-center lg:items-start ">
-                  <h1 class="sm:mb-3 text-3xl text-blue-500">Featured Institutions</h1>
+                  <h1 class="sm:mb-3 sm:text-5xl text-3xl text-blue-500">Featured Institutions</h1>
                 </div>
           <!-- Image -->
           <div class="grid lg:grid-cols-3 flex flex-1 justify-center sm:px-20 mt-10 sm:mr-60 sm:ml-60  sm:align-center">
@@ -114,7 +114,7 @@
         <div class=" flex flex-col lg:flex-row items-center justify-center gap-x-24">
                  <!-- Content -->
                  <div class="flex flex-1 flex-col px-10 items-center lg:items-start ">
-                  <h1 class="sm:mb-3 text-3xl text-blue-500">Payment Options</h1>
+                  <h1 class="sm:mb-3 sm:text-5xl text-3xl text-blue-500">Payment Options</h1>
                 </div>
           <!-- Image -->
           <div class="sm:mr-60 sm:ml-60 grid lg:grid-cols-3 flex flex-1 justify-center sm:px-20 mt-10 mb-10 sm:align-center">
