adjusted button size on mobile

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui voluptatum excepturi veniam corporis, at fuga!
           </p>
           <div class="flex gap-6">
-            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+            <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 sm:text-5xl sm:py-10 sm:px-20 rounded">
               Get Started
             </button>
           </div>
