--- a/public/index.html
+++ b/public/index.html
@@ -10,13 +10,13 @@
 
 
       <header class=" flex items-center px-10 py-4 mt-4 sm:mt-2">
-        <div class="py-1"><img src="./image/logo1.svg" alt="" /></div>
+        <div class="py-1 sm:w-80 sm:h-40"><img src="./image/logo1.svg" alt="" /></div>
     </header>
 
       <div class=" flex flex-col-reverse lg:flex-row items-center gap-2 mt-5 lg:mt-10">
         <!-- Content -->
         <div class="flex flex-1 flex-col px-10 items-center lg:items-start">
-          <h2 class="text-blue-500 text-3xl md:text-4xl lg:text-5xl text-center lg:text-left mb-3">
+          <h2 class="text-blue-500 text-5xl md:text-4xl lg:text-5xl text-center lg:text-left mb-3">
             Pay and get paid
           </h2>
           <!-- <h2 class="text-blue-300 text-3xl md:text-4xl lg:text-5xl text-center lg:text-left mb-6">
@@ -26,7 +26,7 @@
            A secured payment gateway you can trust to safely make and also receive payment without stress of losing money, which supports your various payment portals.
           </p>
           <div class="flex gap-6">
-            <button class="bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 sm:text-xl sm:py-5 sm:px-5 rounded-full">
+            <button class="bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 sm:text-3xl sm:py-10 sm:px-10 rounded-full">
               Get Started
             </button>
           </div>
