increased text and button sizes on small screens

--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,50 @@
           lg:-right-36
         "
       ></div> -->
+      <div class="">
+        <div class=" flex flex-col lg:flex-row items-center justify-center gap-x-24">
+                 <!-- Content -->
+                 <!-- <div class="flex flex-1 flex-col px-10 items-center lg:items-start ">
+                  <h1 class="sm:mb-3 sm:text-5xl text-3xl text-blue-500">Payment Options</h1>
+                </div> -->
+          <!-- Image -->
+          <div class="sm:mr-60 sm:ml-60 xl:mr-120 xl:ml-120 flex flex-1 justify-center sm:px-20 mt-5 mb-10 sm:align-center">
+            <img
+              class="w-80 h-40 w-3/4 h-3/4 lg:w-80 lg:h-40"
+              src="./image/mastercard.svg"
+              alt=""
+            />
+            <img
+              class="w-80 h-40 w-3/4 h-3/4 lg:w-80 lg:h-40"
+              src="./image/paypal.svg"
+              alt=""
+            />
+            <img
+            class="w-80 h-40 w-3/4 h-3/4 lg:w-80 lg:h-40"
+            src="./image/visa.svg"
+            alt=""
+          />
+          <img
+              class="w-80 h-40 w-3/4 h-3/4 lg:w-80 lg:h-40"
+              src="./image/momo.svg"
+              alt=""
+            />
+            <img
+              class="w-80 h-40 w-3/4 h-3/4 lg:w-80 lg:h-40"
+              src="./image/atmoney.svg"
+              alt=""
+            />
+            <img
+            class="w-80 h-40 w-3/4 h-3/4 lg:w-80 lg:h-40"
+            src="./image/voda.svg"
+            alt=""
+          />
+          </div>
+   
+        </div>
+       
+      </div>
+
     </section>
 
     <!-- Features -->
