--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
            which supports your various payment portals.
           </p>
           <div class="flex gap-6">
-            <button class="bg-blue-700 hover:bg-blue-500 text-white font-bold py-2 px-4 sm:text-2xl sm:py-10 sm:px-10 rounded-full">
+            <button class="bg-blue-700 hover:bg-blue-500 text-white sm:font-bold py-1 px-2 sm:text-xl sm:py-5 sm:px-5 lg:text-lg lg:py-5 lg:px-5 rounded-full">
               Get Started
             </button>
           </div>
