--- a/public/index.html
+++ b/public/index.html
@@ -30,49 +30,9 @@
               Get Started
             </button>
           </div>
-           <div class="">
-        <div class=" flex flex-col lg:flex-row items-center justify-center gap-x-24">
-                 <!-- Content -->
-                 <!-- <div class="flex flex-1 flex-col px-10 items-center lg:items-start ">
-                  <h1 class="sm:mb-3 sm:text-5xl text-3xl text-blue-500">Payment Options</h1>
-                </div> -->
-          <!-- Image -->
-          <div class="sm:mr-60 sm:ml-60 grid lg:grid-cols-3 flex flex-1 justify-center sm:px-20 mt-10 mb-10 sm:align-center">
-            <img
-              class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full"
-              src="./image/mastercard.svg"
-              alt=""
-            />
-            <img
-              class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full"
-              src="./image/paypal.svg"
-              alt=""
-            />
-            <img
-            class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full"
-            src="./image/visa.svg"
-            alt=""
-          />
-          <img
-              class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full"
-              src="./image/momo.svg"
-              alt=""
-            />
-            <img
-              class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full"
-              src="./image/atmoney.svg"
-              alt=""
-            />
-            <img
-            class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full"
-            src="./image/voda.svg"
-            alt=""
-          />
-          </div>
-   
-        </div>
-       
-      </div>
+           <div class="flex-container mt-5 mb-10">
+            <img src="./image/all in 1.svg" alt="">
+           </div>
         </div>
        
         <!-- Image -->
