increased text and button sizes on small screens

--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
               Get Started
             </button>
           </div>
-           <div class="flex-container mt-5 mb-10">
-            <img src="./image/all in 1.svg" alt="">
+           <div class="flex-container  mt-5 mb-10 flex justify-center items-center">
+            <img class="w-1/2 h-1/2 " src="./image/all in 1.svg" alt="">
            </div>
         </div>
        
