--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" href="./image/favicon.ico">
     <link rel="stylesheet" href="output.css" />
     <title>Modern Pay</title>
   </head>
@@ -21,17 +22,18 @@
           <!-- <h2 class="text-blue-300 text-3xl md:text-4xl lg:text-5xl text-center lg:text-left mb-6">
             Lorem ipsum dolor sit.
           </h2> -->
-          <p class="text-gray-400 text-lg text-center lg:text-left mb-6 md:break-normal lg:break-all xl:break-all">
+          <p class="text-gray-400 text-lg text-center lg:text-left mb-10 md:break-normal lg:break-all xl:break-all">
            A secured payment gateway you can trust to safely make and also receive payment without stress of losing money, 
            which supports your various payment portals.
           </p>
           <div class="flex gap-6">
-            <button class="bg-blue-700 hover:bg-blue-500 text-white sm:font-bold py-1 px-2 sm:text-xl sm:py-5 sm:px-5 lg:text-lg lg:py-5 lg:px-5 rounded-full">
-              Get Started
+            <button class="bg-blue-700 hover:bg-blue-500 text-white font-bold py-1 px-2 sm:text-xl sm:py-4 sm:px-4 lg:text-lg lg:py-5 lg:px-5 rounded-full">
+              Sign Up
             </button>
           </div>
-           <div class="flex-container  mt-5 mb-10 flex justify-center items-center">
-            <img class="w-1/2 h-1/2 " src="./image/all in 1.svg" alt="">
+          <div class="flex-container flex gap-6  mt-10 mb-5 flex justify-center items-center ">
+            <img class="w-1/2 h-1/2 " src="./image/3in1a.svg" alt="">
+            <img class="w-1/2 h-1/2 " src="./image/3in1b.svg" alt="">
            </div>
         </div>
        
