added favicon and adjusted apperance

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <!-- Hero -->
     <section class=" relative ">
 
-      <header class=" flex items-center px-10 py-4 mt-4 sm:mt-2">
+      <header class=" flex items-center px-10  mt-4">
         <div class="py-1"><img src="./image/logo1.svg" alt="" /></div>
     </header>
 
@@ -32,8 +32,8 @@
             </button>
           </div>
           <div class="flex-container flex gap-6  mt-10 mb-5 flex justify-center items-center ">
-            <img class="w-1/2 h-1/2 " src="./image/3in1a.svg" alt="">
-            <img class="w-1/2 h-1/2 " src="./image/3in1b.svg" alt="">
+            <img class="w-1/2 h-1/2 mr-60 ml-60" src="./image/3in1a.svg" alt="">
+            <img class="w-1/2 h-1/2 mr-60 ml-60" src="./image/3in1b.svg" alt="">
            </div>
         </div>
        
