added favicon and adjusted apperance

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,9 @@
     <!-- Hero -->
     <section class=" relative ">
 
-      <header class=" flex items-center px-10  mt-4">
+      <!-- <header class=" flex items-center px-10  mt-4">
         <div class="py-1"><img src="./image/logo1.svg" alt="" /></div>
-    </header>
+    </header> -->
 
       <div class=" flex flex-col-reverse lg:flex-row items-center gap-2 mt-5 lg:mt-10">
         <!-- Content -->
@@ -39,7 +39,7 @@
        
         <!-- Image -->
         <div class="flex justify-center flex-1 mb-10 md:mb-10 lg:mb-0 z-10">
-          <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./image/Transactional SMS.svg" alt="" />
+          <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./image/Transactional SMS 1.svg" alt="" />
         </div>
       </div>
       <!-- Rounded Rectangle -->
