added favicon and adjusted apperance

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,11 @@
     <!-- Hero -->
     <section class=" relative ">
 
-      <!-- <header class=" flex items-center px-10  mt-4">
+      <div class=" flex items-center px-10  mt-4">
         <div class="py-1"><img src="./image/logo1.svg" alt="" /></div>
-    </header> -->
+      </div>
 
-      <div class=" flex flex-col-reverse lg:flex-row items-center gap-2 mt-5 lg:mt-10">
+      <div class=" flex flex-col-reverse lg:flex-row items-center gap-2 mt-10 lg:mt-10">
         <!-- Content -->
         <div class="flex flex-1 flex-col px-10 items-center lg:items-start">
           <h2 class="text-blue-500 text-3xl md:text-4xl lg:text-5xl text-center lg:text-left mb-6">
@@ -26,20 +26,21 @@
            A secured payment gateway you can trust to safely make and also receive payment without stress of losing money, 
            which supports your various payment portals.
           </p>
-          <div class="flex gap-6">
-            <button class="bg-blue-700 hover:bg-blue-500 text-white font-bold py-1 px-2 sm:text-xl sm:py-4 sm:px-4 lg:text-lg lg:py-5 lg:px-5 rounded-full">
-              Sign Up
-            </button>
-          </div>
-          <div class="flex-container flex gap-6  mt-10 mb-5 flex justify-center items-center ">
+
+          <div class="flex-container flex gap-3  mb-10 flex justify-center items-center ">
             <img class="w-1/2 h-1/2 mr-60 ml-60" src="./image/3in1a.svg" alt="">
             <img class="w-1/2 h-1/2 mr-60 ml-60" src="./image/3in1b.svg" alt="">
            </div>
+           <div class="flex gap-6">
+            <button class="bg-blue-700 hover:bg-blue-500 text-white font-bold mt-5 py-1 px-2 sm:text-xl sm:py-4 sm:px-4 lg:text-lg lg:py-5 lg:px-5 rounded-full">
+              Sign Up
+            </button>
+          </div>
         </div>
        
         <!-- Image -->
-        <div class="flex justify-center flex-1 mb-10 md:mb-10 lg:mb-0 z-10">
-          <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./image/Transactional SMS 1.svg" alt="" />
+        <div class="flex justify-center flex-1 mb-5 md:mb-5 lg:mb-0 z-10">
+          <img class="w-5/6 h-5/6 sm:w-3/4 sm:h-3/4 md:w-full md:h-full" src="./image/Transactional SMS.svg" alt="" />
         </div>
       </div>
       <!-- Rounded Rectangle -->
