--- a/public/index.html
+++ b/public/index.html
@@ -7,27 +7,29 @@
   </head>
   <body class="bg-gray-100 ">
     <!-- Hero -->
-    <section class=" relative ">
+    <section class="w-screen h-screen">
 
-      <div class=" flex items-center px-10  mt-4">
-        <div class="py-1"><img src="./image/logo1.svg" alt="" /></div>
-      </div>
-
-      <div class=" flex flex-col-reverse lg:flex-row items-center gap-2 mt-10 lg:mt-10">
+      <div class=" flex flex-col lg:flex-row items-center gap-2 mt-10 lg:mt-10">
         <!-- Content -->
-        <div class="flex flex-1 flex-col px-10 items-center lg:items-start">
-          <h2 class="text-blue-500 text-3xl md:text-4xl lg:text-5xl text-center lg:text-left mb-6">
+        <div class="flex flex-1 flex-col px-10 items-center">
+
+
+          <header class=" flex justify-center items-center px-10  mt-4">
+            <div class="py-1 sm:mb-20"><img src="./image/logo1.svg" alt="" /></div>
+          </header>
+
+          <!-- <h2 class="text-blue-500 text-3xl md:text-4xl lg:text-5xl text-center lg:text-left mb-6">
             Pay and get paid
-          </h2>
+          </h2> -->
           <!-- <h2 class="text-blue-300 text-3xl md:text-4xl lg:text-5xl text-center lg:text-left mb-6">
             Lorem ipsum dolor sit.
           </h2> -->
-          <p class="text-gray-400 text-lg text-center lg:text-left mb-10 md:break-normal lg:break-all xl:break-all">
+          <!-- <p class="text-gray-400 text-lg text-center lg:text-left mb-10 md:break-normal lg:break-all xl:break-all">
            A secured payment gateway you can trust to safely make and also receive payment without stress of losing money, 
            which supports your various payment portals.
-          </p>
+          </p> -->
 
-          <div class="flex-container flex gap-3  mb-10 flex justify-center items-center ">
+          <!-- <div class="flex-container flex gap-3  mb-10 flex justify-center items-center ">
             <img class="w-1/2 h-1/2 mr-60 ml-60" src="./image/3in1a.svg" alt="">
             <img class="w-1/2 h-1/2 mr-60 ml-60" src="./image/3in1b.svg" alt="">
            </div>
@@ -35,7 +37,7 @@
             <button class="bg-blue-700 hover:bg-blue-500 text-white font-bold mt-5 py-1 px-2 sm:text-xl sm:py-4 sm:px-4 lg:text-lg lg:py-5 lg:px-5 rounded-full">
               Sign Up
             </button>
-          </div>
+          </div> -->
         </div>
        
         <!-- Image -->
