changed the page to under maintainance

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
+
     <link rel="icon" href="./image/favicon.ico">
     <link rel="stylesheet" href="output.css" />
     <title>Modern Pay</title>
   </head>
   <body class="bg-gray-100 ">
     <!-- Hero -->
-    <section class=" relative ">
-
-      <div class=" flex flex-col lg:flex-row items-center gap-2 mt-10 lg:mt-10">
+      <div class="container flex flex-col lg:flex-row items-center gap-2 mt-10 lg:mt-10">
         <!-- Content -->
         <div class="flex flex-1 flex-col px-10 items-center">
 
 
-          <header class=" flex justify-center items-center px-10  mt-4">
+          <header class=" flex justify-center items-center px-10 sm:mt-20 mt-4">
             <div class="py-1"><img src="./image/logo1.svg" alt="" /></div>
           </header>
+
+          <h1 class="font-bold mt-10 text-4xl text-blue-500">Website Under Maintainace</h1>
         </div>
+
+       
        
         <!-- Image -->
         <div class="flex justify-center flex-1 mb-5 md:mb-5 lg:mb-0 z-10">
