--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   </head>
   <body class="bg-gray-100 ">
     <!-- Hero -->
-      <div class="container flex flex-col lg:flex-row items-center gap-2 mt-10 lg:mt-10">
+      <div class="flex flex-col lg:flex-row items-center gap-2 mt-10 lg:mt-10">
         <!-- Content -->
         <div class="flex flex-1 flex-col px-10 items-center">
 
