--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,11 @@
           </header>
 
           <h1 class="font-bold mt-10 text-5xl sm:text-5xl text-blue-500">Website Under Maintainace !</h1>
+          <p class="text-gray-400 text-justify mt-5 mb-5">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam laborum est facilis facere 
+            blanditiis atque possimus eius ipsam consequuntur ullam. Lorem ipsum dolor sit amet consectetur 
+            adipisicing elit. Veniam animi architecto reiciendis, quaerat in aut! Id qui numquam soluta provident.</p>
         </div>
+
 
        
        
